adds some responsiveness

--- a/styles/partials/base.scss
+++ b/styles/partials/base.scss
@@ -5,6 +5,8 @@ $container-margins: 30px;
 $title-margins: 30px;
 $para-margins: 30px;
 
+$side-gutter-sm: 10%;
+
 // Colours
 
 $brand-col1: #f0f2f2;
