--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,6 +19,11 @@ h2 {
   font-weight: bold;
   margin-bottom: 30px;
 }
+@media screen and (max-width: 768px) {
+  h2 {
+    text-align: center;
+  }
+}
 
 h3 {
   font-size: 24px;
@@ -128,6 +133,7 @@ nav {
   justify-content: left;
   padding-right: 30px;
   max-width: 300px;
+  margin-bottom: 30px;
 }
 .about__content__text-container {
   padding-left: 30px;
@@ -137,6 +143,19 @@ nav {
   font-weight: bold;
 }
 
+@media screen and (max-width: 768px) {
+  .about__container {
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+  .about__content {
+    flex-direction: column;
+    align-items: center;
+  }
+  .about__content__img-container {
+    padding-right: 0px;
+  }
+}
 .skills {
   display: flex;
   justify-content: center;
@@ -169,6 +188,19 @@ nav {
   margin-right: 0px;
 }
 
+@media screen and (max-width: 992px) {
+  .skills__container {
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+  .skills__cards {
+    flex-direction: column;
+  }
+  .skills__cards > div {
+    width: auto;
+    margin-bottom: 30px;
+  }
+}
 .highlighted-skill {
   border: 1px solid teal;
   border-radius: 5px;
@@ -191,6 +223,13 @@ nav {
   margin-right: 75px;
   max-width: 1200px;
 }
+.projects__flex-display {
+  display: flex;
+  justify-content: space-between;
+}
+.projects__eso {
+  width: 45%;
+}
 .projects__eso h3 {
   margin-bottom: 0px;
 }
@@ -211,6 +250,18 @@ nav {
   border: 1px solid white;
 }
 
+@media screen and (max-width: 992px) {
+  .projects__container {
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+  .projects__eso {
+    width: auto;
+  }
+  .projects__gallery img {
+    margin-right: 0px;
+  }
+}
 .contact {
   display: flex;
   justify-content: center;
@@ -230,11 +281,25 @@ nav {
   width: 100%;
 }
 .contact__links {
-  display: flex;
-  flex-direction: column;
+  font-size: 24px;
 }
-.contact__links a {
+.contact__links ul {
+  margin-top: 30px;
+  list-style-type: none;
+  padding-left: 0px;
+}
+.contact__links ul li {
   font-weight: bold;
+}
+
+@media screen and (max-width: 768px) {
+  .contact__container {
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+  .contact__links {
+    font-size: 18px;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
