--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -20,6 +20,10 @@ h2 {
 	font-size: base.$h2-size;
 	font-weight: bold;
 	margin-bottom: base.$title-margins;
+
+	@media screen and (max-width: 768px) {
+		text-align: center;
+	}
 }
 
 h3 {
@@ -143,6 +147,7 @@ nav {
 			justify-content: left;
 			padding-right: 30px;
 			max-width: base.$image-max;
+			margin-bottom: 30px;
 		}
 
 		&__text-container {
@@ -152,6 +157,24 @@ nav {
 		&__text-container p:nth-child(2) {
 			font-style: italic;
 			font-weight: bold;
+		}
+	}
+}
+
+@media screen and (max-width: 768px) {
+	.about {
+		&__container {
+			margin-left: base.$side-gutter-sm;
+			margin-right: base.$side-gutter-sm;
+		}
+
+		&__content {
+			flex-direction: column;
+			align-items: center;
+
+			&__img-container {
+				padding-right: 0px;
+			}
 		}
 	}
 }
@@ -195,6 +218,24 @@ nav {
 	}
 }
 
+@media screen and (max-width: 992px) {
+	.skills {
+		&__container {
+			margin-left: base.$side-gutter-sm;
+			margin-right: base.$side-gutter-sm;
+		}
+
+		&__cards {
+			flex-direction: column;
+
+			& > div {
+				width: auto;
+				margin-bottom: base.$para-margins;
+			}
+		}
+	}
+}
+
 .highlighted-skill {
 	border: 1px solid teal;
 	border-radius: 5px;
@@ -202,6 +243,8 @@ nav {
 	background-color: base.$brand-col3;
 	color: base.$brand-col1;
 }
+
+// Projects
 
 .projects {
 	display: flex;
@@ -218,7 +261,14 @@ nav {
 		max-width: base.$content-max-width;
 	}
 
+	&__flex-display {
+		display: flex;
+		justify-content: space-between;
+	}
+
 	&__eso {
+		width: 45%;
+
 		& h3 {
 			margin-bottom: 0px;
 		}
@@ -245,6 +295,25 @@ nav {
 	}
 }
 
+@media screen and (max-width: 992px) {
+	.projects {
+		&__container {
+			margin-left: base.$side-gutter-sm;
+			margin-right: base.$side-gutter-sm;
+		}
+
+		&__eso {
+			width: auto;
+		}
+
+		&__gallery img {
+			margin-right: 0px;
+		}
+	}
+}
+
+// Contact
+
 .contact {
 	display: flex;
 	justify-content: center;
@@ -266,14 +335,29 @@ nav {
 	}
 
 	&__links {
-		display: flex;
-		flex-direction: column;
+		font-size: 24px;
 
-		& a {
-			font-weight: bold;
+		& ul {
+			margin-top: base.$para-margins;
+			list-style-type: none;
+			padding-left: 0px;
+
+			& li {
+				font-weight: bold;
+			}
 		}
 	}
 }
 
-// @media screen and (max-width: 768px) {
-// }
+@media screen and (max-width: 768px) {
+	.contact {
+		&__container {
+			margin-left: base.$side-gutter-sm;
+			margin-right: base.$side-gutter-sm;
+		}
+
+		&__links {
+			font-size: 18px;
+		}
+	}
+}
