--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,8 @@
 * {
   margin: 0;
   color: #f0f2f2;
-  font-family: "Karla", sans-serif;
-  font-weight: 200;
+  font-family: "Proza Libre", sans-serif;
+  font-weight: 400;
 }
 
 body {
