--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -3,8 +3,8 @@
 * {
 	margin: 0;
 	color: base.$brand-col1;
-	font-family: "Karla", sans-serif;
-	font-weight: 200;
+	font-family: "Proza Libre", sans-serif;
+	font-weight: 400;
 }
 
 body {
